// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_mybucket_ResourceGroup_C1D7AF27\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"my_bucket-c8045fcc\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_mybucket_StorageAccount_A0150B8A\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.location}\\",
        \\"name\\": \\"mybucketc8045fcc\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"public\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_mybucket_StorageAccount_A0150B8A.name}\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "azure": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
              "version": "3.0.16",
            },
            "id": "azure",
            "path": "root/azure",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "my_bucket": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                  "version": "3.0.16",
                },
                "id": "Bucket",
                "path": "root/my_bucket/Bucket",
              },
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "3.0.16",
                },
                "id": "ResourceGroup",
                "path": "root/my_bucket/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "3.0.16",
                },
                "id": "StorageAccount",
                "path": "root/my_bucket/StorageAccount",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud object store",
              "title": "Bucket",
            },
            "id": "my_bucket",
            "path": "root/my_bucket",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket name valid 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_TheUncannyBucket_ResourceGroup_056902E8\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"The-Uncanny-Bucket-c8ac4720\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_TheUncannyBucket_StorageAccount_A894AF8E\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_TheUncannyBucket_ResourceGroup_056902E8.location}\\",
        \\"name\\": \\"theuncannybucketc8ac4720\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_TheUncannyBucket_ResourceGroup_056902E8.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_TheUncannyBucket_DDA021FB\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"the-uncanny-bucket-c8ac4720\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_TheUncannyBucket_StorageAccount_A894AF8E.name}\\"
      }
    }
  }
}"
`;

exports[`bucket name valid 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "The-Uncanny-Bucket": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                  "version": "3.0.16",
                },
                "id": "Bucket",
                "path": "root/The-Uncanny-Bucket/Bucket",
              },
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "3.0.16",
                },
                "id": "ResourceGroup",
                "path": "root/The-Uncanny-Bucket/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "3.0.16",
                },
                "id": "StorageAccount",
                "path": "root/The-Uncanny-Bucket/StorageAccount",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud object store",
              "title": "Bucket",
            },
            "id": "The-Uncanny-Bucket",
            "path": "root/The-Uncanny-Bucket",
          },
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "azure": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
              "version": "3.0.16",
            },
            "id": "azure",
            "path": "root/azure",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"resource\\": {
    \\"azurerm_resource_group\\": {
      \\"root_mybucket_ResourceGroup_C1D7AF27\\": {
        \\"location\\": \\"East US\\",
        \\"name\\": \\"my_bucket-c8045fcc\\"
      }
    },
    \\"azurerm_storage_account\\": {
      \\"root_mybucket_StorageAccount_A0150B8A\\": {
        \\"account_replication_type\\": \\"LRS\\",
        \\"account_tier\\": \\"Standard\\",
        \\"location\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.location}\\",
        \\"name\\": \\"mybucketc8045fcc\\",
        \\"resource_group_name\\": \\"\${azurerm_resource_group.root_mybucket_ResourceGroup_C1D7AF27.name}\\"
      }
    },
    \\"azurerm_storage_container\\": {
      \\"root_mybucket_Bucket_10512A98\\": {
        \\"container_access_type\\": \\"private\\",
        \\"name\\": \\"my-bucket-c8045fcc\\",
        \\"storage_account_name\\": \\"\${azurerm_storage_account.root_mybucket_StorageAccount_A0150B8A.name}\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "WingLogger": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud logging facility",
              "hidden": true,
              "title": "Logger",
            },
            "id": "WingLogger",
            "path": "root/WingLogger",
          },
          "azure": Object {
            "constructInfo": Object {
              "fqn": "@cdktf/provider-azurerm.provider.AzurermProvider",
              "version": "3.0.16",
            },
            "id": "azure",
            "path": "root/azure",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.13.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
          "my_bucket": Object {
            "attributes": Object {
              "wing:resource:connections": Array [],
              "wing:resource:stateful": true,
            },
            "children": Object {
              "Bucket": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageContainer.StorageContainer",
                  "version": "3.0.16",
                },
                "id": "Bucket",
                "path": "root/my_bucket/Bucket",
              },
              "ResourceGroup": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.resourceGroup.ResourceGroup",
                  "version": "3.0.16",
                },
                "id": "ResourceGroup",
                "path": "root/my_bucket/ResourceGroup",
              },
              "StorageAccount": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-azurerm.storageAccount.StorageAccount",
                  "version": "3.0.16",
                },
                "id": "StorageAccount",
                "path": "root/my_bucket/StorageAccount",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.0.130",
            },
            "display": Object {
              "description": "A cloud object store",
              "title": "Bucket",
            },
            "id": "my_bucket",
            "path": "root/my_bucket",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.13.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.13.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
